# SafetyMap

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: codeql.yml
backend/: Dockerfile  README.md  docker-compose.yml  setup.cfg
backend/src/: main.py
backend/src/api/: signal.py  status.py
backend/src/db/: mongo.py
backend/src/utils/: common_logger.py  custom_error_handlers.py  custom_types.py
backend/tests/endpoints/: test_docs.py
frontend/: README.md  app.json  package-lock.json  package.json
mobile/: README.md  app.json  package-lock.json  package.json
mobile/.expo/prebuild/: cached-packages.json
mobile/ios/mobile.xcodeproj/: project.pbxproj
web/: package-lock.json  package.json
web/src/: App.js
web/src/Components/Map/: Map.js
