[metadata]
name = safety_map_backend
version = v0.0.1

author = Akihiro Inui
description = Backend API for Safety Map
url = https://github.com/akihiro-inui/SignalSearch.git

[options]
packages = find:
python_requires = >=3.9.0


[options.extras_require]
api =
    fastapi>=0.64.0
    starlette>=0.13.6
    requests==2.25.1
    uvicorn>=0.15.0

db =
    pymongo[srv]>=4.2.0

server =
    %(api)s
    %(db)s

tests =
    %(server)s
    mypy>=0.931
    pytest>=6.2.5
    pytest-azurepipelines>=0.8.0
    pytest-cov>=3.0.0
    vulture>=2.3
    black>=21.9b0
    starlette[full]>=0.13.6

all =
    %(server)s
    %(tests)s


[mypy]
files = src
ignore_missing_imports = True
disallow_untyped_defs = True
warn_redundant_casts = True
install_types = True
non_interactive = True
